# auto-stock

./: .gitignore  dashboard.md  要求.md
multi-asset-portfolio/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
multi-asset-portfolio/.github/PULL_REQUEST_TEMPLATE/: engine.md
multi-asset-portfolio/.github/workflows/: backtest-validation.yml  benchmark.yml  ci.yml  release.yml
multi-asset-portfolio/checkpoints/: cp_0010.pkl  cp_0020.pkl  cp_0030.pkl  cp_0040.pkl  cp_0050.pkl  cp_0060.pkl  cp_0070.pkl  cp_0080.pkl  cp_0090.pkl  cp_0100.pkl  cp_0120.pkl  cp_0140.pkl  cp_0160.pkl  cp_0180.pkl
multi-asset-portfolio/config/: README_UNIVERSE.md  asset_master.yaml  cost_schedule.yaml  default.yaml  notification.yaml  risk_params.yaml  sector_cache.yaml  universe.yaml  universe_full.yaml  universe_standard.yaml
multi-asset-portfolio/config/portfolios/: japan_stocks.yaml
multi-asset-portfolio/docs/: AGENT_INDEX.md  ARCHITECTURE.md  BACKTEST_COMPARISON_REPORT.md  BACKTEST_STANDARD.md  CACHE_SYSTEM.md  CMD016_INTEGRATION.md  DATA_SOURCES.md  DEPLOYMENT.md  DESIGN_REVIEW_CHECKLIST.md  ENGINE_INTEGRATION.md  INSTALLATION.md  LOGGING_GUIDELINES.md  ML_COMPONENTS.md  ORCHESTRATOR_RESPONSIBILITIES.md  REFACTORING_PLAN.md  SIGNAL_PIPELINE.md  TEST_IMPROVEMENT_PLAN.md  TODO_signals.md  TROUBLESHOOTING.md  backtest_acceleration_options.md  performance_report_guide.md  s3_cache_guide.md  system_overview_for_management.md
multi-asset-portfolio/reports/: backtest_daily_report.html  backtest_monthly_report.html  backtest_weekly_report.html  bias_analysis_report.md
multi-asset-portfolio/reports/3month_report/: performance_report.html  performance_report.txt
multi-asset-portfolio/scripts/: audit_pipeline_backtest_parity.py  backtest_results.py  benchmark.py  benchmark_backtest.py  build_asset_master.py  build_signal_cache.py  build_standard_cache.py  calculate_benchmarks.py  check_gpu.py  export_cmd020_report.py  fetch_full_universe.py  fetch_universe_lists.py  generate_performance_report.py  import_symbols_from_s3.py  migrate_cache_to_s3.py  quality_filter_universe.py  run_15year_backtest.py  run_all_backtests.py  run_backtest.py  run_bayesian_optimization.py  run_benchmark.py  run_daily_backtest_15y.py  run_full_backtest.py  run_standard_backtest.py  run_static_analysis.py  setup_dedicated_server.sh  test_final_speedup.py  validate_backtest.py
multi-asset-portfolio/scripts/result_viewer/: __init__.py  app.py
multi-asset-portfolio/src/: __init__.py  main.py
multi-asset-portfolio/src/allocation/: __init__.py  allocator.py  black_litterman.py  constraints.py  covariance.py  cvar_optimizer.py  dynamic_allocation_params.py  dynamic_covariance_params.py  executor.py  hrp.py  kelly_allocator.py  lot_adjuster.py  nco.py  net_profit_allocator.py  order_generator.py  return_estimator.py  risk_parity.py  smoother.py  transaction_cost.py  transaction_cost_optimizer.py
multi-asset-portfolio/src/analysis/: __init__.py  backtest_archive.py  backtest_comparator.py  benchmark_fetcher.py  chart_generator.py  dashboard.py  parameter_optimizer.py  performance_analyzer.py  performance_comparator.py  portfolio_specific_params.py  report_generator.py  result_store.py  static_charts.py
multi-asset-portfolio/src/backtest/: __init__.py  adaptive_window.py  base.py  cache.py  covariance_cache.py  engine.py  factory.py  fast_engine.py  gpu_compute.py  incremental_signal.py  long_term_validation.py  memory_optimizer.py  numba_accelerate.py  numba_compute.py  parameter_stability_filter.py  purged_kfold.py  ray_engine.py  rebalance_scheduler.py  rebalance_tracker.py  regime_triggered_reoptimization.py  reliability.py  result.py  score_vectorized.py  signal_precompute.py  simulator.py  streaming_covariance.py  streaming_engine.py  synthetic_data.py  vectorbt_engine.py  vectorized_compute.py
multi-asset-portfolio/src/config/: __init__.py  constants.py  resource_config.py  schemas.py  settings.py
multi-asset-portfolio/src/data/: __init__.py  batch_fetcher.py  cache.py  calendar_manager.py  currency_converter.py  dividend_handler.py  duckdb_layer.py  fetcher.py  finra.py  quality_checker.py  sec_edgar.py  universe_loader.py
multi-asset-portfolio/src/execution/: __init__.py  timing_optimizer.py
multi-asset-portfolio/src/meta/: __init__.py  adaptive_lookback.py  alpha_param_optimizer.py  alpha_scorer.py  bayesian_optimizer.py  dynamic_params.py  dynamic_scorer_params.py  dynamic_weighter.py  dynamic_weighter_params.py  enhanced_alpha_scorer.py  ensemble_combiner.py  entropy_controller.py  hierarchical_ensemble.py  learner.py  param_consistency.py  scorer.py  top_n_selector.py  weighter.py
multi-asset-portfolio/src/ml/: __init__.py  dynamic_ensemble_weights.py  ppo_allocator.py  return_predictor.py  xgboost_stacking.py
multi-asset-portfolio/src/notification/: __init__.py  discord.py  portfolio_state.py  scheduler.py
multi-asset-portfolio/src/orchestrator/: __init__.py  anomaly_detector.py  backtest_initializer.py  cmd016_integrator.py  data_preparation.py  exceptions.py  fallback.py  pipeline.py  risk_allocation.py  signal_generation.py  strategy_evaluation.py  unified_executor.py  weight_calculation.py
multi-asset-portfolio/src/portfolio/: __init__.py  config.py  history.py  (+2 more)
multi-asset-portfolio/tests/: __init__.py  test_cache_improvements.py  test_cache_manager_s3.py  test_cache_validation_result.py  test_cli_options.py  test_covariance_cache_s3.py  test_data_cache_s3.py  test_fast_engine_resource_config.py  test_fast_engine_s3.py  test_incremental_cache_integration.py  test_incremental_covariance_precision.py  test_incremental_precompute_task041_3.py  test_missing_signals_task041_3a.py  test_pipeline_backtest_parity.py  test_pipeline_cache_injection.py  test_precompute_all_task041_4.py  test_precompute_all_tickers_task041_8a.py  test_precompute_new_tickers.py  test_quality_cache_task040_2.py  test_signal_classification.py  test_signal_precompute_s3.py  test_signal_timeframe_affinity.py  test_unified_executor_storage.py  test_validate_cache_incremental.py
(+164 files in other folders)
